Project/styles/siteplan.css
:root {
  --color-primary: #7F5539;
  --color-secondary: #A68A64;
  --color-contrast: #656D4A;
  --color-background: #FAF8F4;
  --color-text: #414833;
}

body {
  font-family: 'Roboto', sans-serif;
  background-color: var(--color-background);
  color: var(--color-text);
  font-weight: bolder;
  margin: 25px;
}

h1 {
    font-family: 'Merriweather', serif;
    text-align: center;
    font-size: 3rem;
    background-color: #A68A64;
    color: #ffffff;
    border-radius: 33px;
    padding: .2rem;
}

h2, h3, h4, h5, h6 {
    font-family: 'Merriweather', serif;
    color: var(--color-text);
    font-size: 1.7rem;
}

img {
    display: flex;
    flex-direction: column;
    border-radius: 23px;
    border: solid 5px var(--color-secondary);
    margin: 15px;
    padding: 7px;
}

